--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "prettierrc": "^0.0.0-5",
     "typescript": "^5.5.3",
     "vite": "^5.4.0"
   }
